--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@firebase/app-check": "^0.8.9",
     "@heroicons/vue": "^2.1.5",
     "core-js": "^3.8.3",
+    "firebase": "^9.23.0",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
