--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.47",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.14"
   },
   "eslintConfig": {
