--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "markdown-it-sup": "^2.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-done-right": "^4.2.0",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
     "vue3-markdown-it": "^1.0.10"
@@ -37,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
